kubernetes/apps/observability/loki/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
  annotations:
    external-dns.alpha.kubernetes.io/public: "false"
spec:
  parentRefs:
    - name: gateway-public
      namespace: network
  hostnames: ["loki.vaderrp.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: loki-gateway
          port: 80
